# templates

./: .gitignore  .prekignore  AGENTS.md  LICENSE.txt  package.json  prek.toml  pyproject.toml
.agents/instructions/: agent-customization.instructions.md  python-module-policy.instructions.md  template-variants.instructions.md  testing-and-ci.instructions.md  tooling-and-automation.instructions.md
.github/: dependabot.yml
.github/workflows/: ci.yml
templates/bun/: .gitignore  .lintstagedrc.mjs  .markdownlint.jsonc  AGENTS.md  bunfig.toml  package.json  prek.toml
templates/bun, uv/: .gitignore  .lintstagedrc.mjs  AGENTS.md  bunfig.toml  package.json  prek.toml  pyproject.toml
templates/bun, uv/.agents/instructions/: markdown-and-customizations.instructions.md  python-quality-gates.instructions.md  scripts-and-permissions.instructions.md  testing-anyio-pytest.instructions.md  tooling-bun-uv.instructions.md
templates/bun, uv/.github/: dependabot.yml
templates/bun, uv/.github/workflows/: ci.yml
templates/bun/.agents/instructions/: markdown-and-customizations.instructions.md  python-quality-gates.instructions.md  scripts-and-permissions.instructions.md  testing-anyio-pytest.instructions.md  tooling-bun-uv.instructions.md
templates/bun/.agents/prompts/: commit-staged.prompt.md
templates/bun/.github/: dependabot.yml
templates/bun/.github/workflows/: ci.yml
templates/cargo/: .commitlintrc.yml  .envrc  .gitignore  .rustfmt.toml  AGENTS.md  Cargo.toml  README.md  prek.toml
templates/cargo/.agents/instructions/: language-and-stack-detection.instructions.md  markdown-and-customizations.instructions.md  rust-workflow.instructions.md  scripts-and-permissions.instructions.md  tooling-and-validation-detection.instructions.md
templates/cargo/.agents/prompts/: commit-staged.prompt.md
templates/cargo/.cargo/: config.toml
templates/cargo/.cargo-husky/hooks/: commit-msg  pre-commit  pre-push
templates/cargo/.config/: nextest.toml
templates/cargo/.github/: dependabot.yml
templates/cargo/.github/workflows/: ci.yml
templates/cargo/scripts/: build.rs  run-all-tests.ps1  run-all-tests.sh
templates/cargo/scripts/cargo-bin/: Cargo.toml
templates/cargo/scripts/cargo-bin/src/: main.rs
templates/general/: .gitattributes  .gitignore  AGENTS.md  prek.toml
templates/general/.agents/instructions/: language-and-stack-detection.instructions.md  markdown-and-customizations.instructions.md  scripts-and-permissions.instructions.md  tooling-and-validation-detection.instructions.md
templates/general/.github/: dependabot.yml
templates/general/.github/workflows/: ci.yml  commitlint.yml
templates/uv/: .editorconfig  .gitignore  AGENTS.md  prek.toml  pyproject.toml
templates/uv/.agents/instructions/: markdown-and-customizations.instructions.md  python-quality-gates.instructions.md  scripts-and-permissions.instructions.md  testing-anyio-pytest.instructions.md  tooling-bun-uv.instructions.md
templates/uv/.agents/prompts/: commit-staged.prompt.md
templates/uv/.github/: dependabot.yml
templates/uv/.github/workflows/: ci.yml
templates/uv/tests/: test_git_executable.py
tests/: test_supply_chain_delay.py
