[package]
name = "EDITME"
version = "0.0.0"
edition = "2024"
rust-version = "1.94.0"
description = "EDITME"
license-file = "LICENSE.txt"
publish = false  # EDITME
build = "scripts/build.rs"

[dependencies]

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }

[package.metadata.bin]
# <https://github.com/cargo-bins/cargo-binstall/issues/2476>
# cargo-binstall = { version = "1.17.8" }
commitlint-rs = { bins = ["commitlint"], version = "0.2.4" }
rumdl = { version = "0.1.59" }

[workspace]
members = ["scripts/cargo-bin"]
