[package]
name = "EDITME"
version = "0.0.0"
edition = "2024"
rust-version = "1.94.0"
description = "EDITME"
license-file = "LICENSE.txt"
publish = false              # EDITME
build = "scripts/build.rs"

[dependencies]

[dev-dependencies]

[package.metadata.bin]
cargo-binstall = { version = "1.17.8" }
rumdl = { version = "0.1.59" }

[workspace]
members = ["scripts/cargo-bin"]

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"

[workspace.lints.rust]
warnings = "deny"
